--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,10 +1,3 @@
 $cell-size: 100px;
 $gap: 1px;
-$calendars:
-  0 'mon',
-  1 'tue',
-  2 'wed',
-  3 'thu',
-  4 'fri',
-  5 'sat',
-  6 'sun';
+$calendars: (0 'mon', 1 'tue', 2 'wed', 3 'thu', 4 'fri', 5 'sat', 6 'sun');
