calendar width changed

--- a/src/styles/calendar-block.scss
+++ b/src/styles/calendar-block.scss
@@ -8,7 +8,7 @@
   display: flex;
   flex-wrap: wrap;
   gap: 1px;
-  width: calc((#{$cell-width} * 7) + #{$cell-paddind} * 2);
+  width: calc((#{$cell-width} * 7) + (1px * 6));
 
   &__day {
     width: $cell-width;
