--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,6 +2,7 @@ $dayWidth: 100px;
 $borderWidth: 1px;
 $borderCount: 6;
 $marginSides: 10px;
+$days: (mon, tue, wed, thu, fri, sat, sun);
 
 * {
   box-sizing: border-box;
@@ -48,4 +49,5 @@ body {
       content: '#{$i}';
     }
   }
+
 }
