--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -1,15 +1,9 @@
 .page {
+  height: 100vh;
+  font-family: Arial, sans-serif;
+  font-size: 30px;
+  font-weight: 500;
+  color: black;
+  display: flex;
   margin: 0;
-  padding: 0;
-
-  /* This container prevent of display: flex in body */
-  &__container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: fixed;
-    inset: 0;
-    margin: 0;
-    padding: 0;
-  }
 }
