--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,67 @@
-body {
+$month-length: 28, 29, 30, 31;
+$days: (0 mon, 1 tue, 2 wed, 3 thu, 4 fri, 5 sat, 6 sun);
+$cell-size: 100px;
+$number-size: 0.3 * $cell-size;
+$col-count: 7;
+$gap: 1px;
+$calendar-width: $col-count * $cell-size + 10px;
+
+* {
   margin: 0;
+}
+
+html {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  gap: $gap;
+  width: $calendar-width;
+  padding: 80px;
+
+  @each $i, $day in $days {
+    &--start-day-#{$day} &__day:first-child {
+      margin-left: $i * $cell-size + $gap * $i;
+    }
+  }
+
+  @for $i from 28 through 31 {
+    &--month-length-#{$i} &__day:nth-child(n + #{$i + 1}) {
+      display: none;
+    }
+  }
+
+  &__day {
+    box-sizing: border-box;
+    width: $cell-size;
+    height: $cell-size;
+    border: 1px solid black;
+    background-color: #eee;
+    font-size: $number-size;
+
+    @for $day from 1 through 31 {
+      &:nth-child(#{$day})::before {
+        content: '#{$day}';
+
+        display: flex;
+        justify-content: center;
+        margin: 35%;
+      }
+    }
+
+    &:hover {
+      cursor: pointer;
+      background-color: #ffbfcb;
+      transform: translateY(-20px);
+      transition-duration: 0.5s;
+    }
+  }
 }
