--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -14,11 +14,12 @@
     height: 100px;
     background-color: #eee;
     border: 1px solid #000;
-    transition: transform 0.5s;
+    transition: all 0.5s;
 
     /* if I put pink color the test don't accept */
     &:hover {
       cursor: pointer;
+      background-color: #ffbfcb;
       transform: translate(0, -20px);
     }
 
