--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,9 @@
-$month-length: 28, 29, 30, 31;
-$days: (0 mon, 1 tue, 2 wed, 3 thu, 4 fri, 5 sat, 6 sun);
-$cell-size: 100px;
-$number-size: 0.3 * $cell-size;
-$col-count: 7;
-$gap: 1px;
-$calendar-width: $col-count * $cell-size + 10px;
+@import '../utils/variables';
 
 * {
   margin: 0;
+  box-sizing: border-box;
+
 }
 
 html {
@@ -25,7 +21,6 @@ html {
   flex-wrap: wrap;
   gap: $gap;
   width: $calendar-width;
-  padding: 80px;
 
   @each $i, $day in $days {
     &--start-day-#{$day} &__day:first-child {
@@ -40,7 +35,6 @@ html {
   }
 
   &__day {
-    box-sizing: border-box;
     width: $cell-size;
     height: $cell-size;
     border: 1px solid black;
