--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,7 +3,6 @@
 * {
   margin: 0;
   box-sizing: border-box;
-
 }
 
 html {
@@ -21,6 +20,7 @@ html {
   flex-wrap: wrap;
   gap: $gap;
   width: $calendar-width;
+  padding: 80px 0;
 
   @each $i, $day in $days {
     &--start-day-#{$day} &__day:first-child {
