--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -32,9 +32,9 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100px;
-    height: 100px;
-    border: 1px solid black;
+    width: #{$dayWidth};
+    height: #{$dayWidth};
+    border: #{$borderWidth} solid black;
     background-color: #eee;
     cursor: pointer;
     transition: transform 0.5s;
@@ -43,6 +43,7 @@ body {
       content: '';
       font-size: 30px;
       font-family: Arial, sans-serif;
+      display: inline-block;
     }
   }
 
