--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,71 @@
-body {
-  margin: 0;
+$cell-size: 100px;
+$week-width: ($cell-size * 7) + 6px;
+$gap-size: 1px;
+
+.body {
+  position: relative;
+}
+
+.calendar {
+  display: flex;
+  gap: $gap-size;
+  padding: 10px;
+  flex-wrap: wrap;
+  width: $week-width;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  &__day {
+    display: flex;
+    box-sizing: border-box;
+    width: $cell-size;
+    height: $cell-size;
+    border: 1px solid black;
+    flex-shrink: 0;
+    background-color: #eee;
+    position: relative;
+    transition-duration: 0.5s;
+
+    &:hover {
+      background-color: #ffbfcb;
+      transform: translateY(-20px);
+      cursor: pointer;
+    }
+
+    @for $number from 1 through 31 {
+      &:nth-child(n + #{$number})::before {
+        position: absolute;
+        content: '#{$number}';
+        display: block;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 30px;
+        text-align: center;
+        line-height: $cell-size;
+        width: 100%;
+        height: 100%;
+      }
+    }
+
+    &--1 {
+      margin-left: $cell-size + $gap-size;
+    }
+  }
+
+  $days-names: sun 1, mon 2, tue 3, wed 4, thu 5, fri 6, sat 7;
+
+  @each $name, $count-number in $days-names {
+    &--start-day--#{$name} .calendar__day:first-child {
+      margin-left: ($cell-size + $gap-size) * $count-number;
+    }
+  }
+
+  @for $last-day from 28 through 31 {
+    &--month-length--#{$last-day} {
+      .calendar__day:nth-child(n + #{$last-day + 1}) {
+        display: none;
+      }
+    }
+  }
 }
