--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,75 @@
+$cell-size: 100px;
+$border-width: 1px;
+$gap: 1px;
+$padding: 10px;
+$days-in-week: 7;
+$start-day: 7;
+$start-day-name: sun;
+$calendar-width: ($cell-size * $days-in-week) + ($gap * ($days-in-week - 1));
+$start-day-margin: $cell-size * ($start-day - 1) + $gap * ($start-day - 1);
+$month-length: 31;
+
+@mixin flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 body {
   margin: 0;
+  padding: 0;
+  height: 100vh;
+
+  @include flex-center;
+}
+
+.calendar {
+  font-family: Arial, sans-serif;
+  width: $calendar-width;
+  display: flex;
+  flex-wrap: wrap;
+  gap: $gap;
+  padding: $padding;
+
+  @for $i from 1 through $month-length {
+    .calendar__day:nth-child(#{$i})::before {
+      content: '#{$i}';
+    }
+  }
+
+  &__day {
+    width: $cell-size;
+    height: $cell-size;
+    border: $border-width solid black;
+    background-color: #eee;
+    box-sizing: border-box;
+    position: relative;
+    transition: transform 0.5s;
+    font-size: 30px;
+
+    @include flex-center;
+
+    cursor: pointer;
+
+    &:hover {
+      background-color: #ffbfcb;
+      transform: translateY(-20px);
+    }
+
+    &::before {
+      content: '';
+      font-family: Arial, sans-serif;
+      font-size: 30px;
+    }
+  }
+}
+
+@each $day in mon, tue, wed, thu, fri, sat, sun {
+  .calendar--start-#{$day} .calendar__day:first-child {
+    margin-left: $start-day-margin;
+  }
+}
+
+.calendar .calendar__day:first-child {
+  margin-left: $start-day-margin;
 }
