add task solution 3

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,7 +3,9 @@ $week-width: ($cell-size * 7) + 6px;
 $gap-size: 1px;
 
 .body {
-  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .calendar {
@@ -12,10 +14,6 @@ $gap-size: 1px;
   padding: 10px;
   flex-wrap: wrap;
   width: $week-width;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 
   &__day {
     display: flex;
