update $days-of-week in src/styles/utils/variable.scss
Co-authored-by: Denys Semtso <70220667+etojeDenys@users.noreply.github.com>

--- a/src/styles/utils/variable.scss
+++ b/src/styles/utils/variable.scss
@@ -7,7 +7,7 @@ $total-item-size: $size-calendar-item + $gap-between-item;
 $width-calendar-body: ($total-item-size * 7 - $gap-between-item);
 
 $days-of-week:
-  mon $total-item-size * 0,
+  mon 0,
   tue $total-item-size * 1,
   wed $total-item-size * 2,
   thu $total-item-size * 3,
