--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -37,7 +37,7 @@
 
   @each $start-day, $margin-left in $days-of-week {
     &--start-day-#{$start-day} :first-child {
-      margin-left: $margin-left;
+      margin-left: $total-item-size * $margin-left;
     }
   }
 
