--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -5,12 +5,17 @@ body {
 }
 
 .calendar {
+  position: fixed;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
   display: flex;
-  padding: 52px 10px 0 29px;
+  align-items: center;
+  padding: 10px;
   gap: 1px;
   flex-wrap: wrap;
-  max-width: 726px;
-  margin: 30px auto 0;
+  width: 706px;
+  margin: 0 auto;
 }
 
 .calendar__day {
@@ -21,6 +26,10 @@ body {
   border: 1px solid black;
   box-sizing: border-box;
   transition: 500ms;
+  font-size: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .calendar__day:hover {
@@ -55,281 +64,126 @@ body {
 
 .calendar__day:nth-child(1)::before {
   content: '1';
-  position: absolute;
-  font-size: 30px;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50.5%;
 }
 
 .calendar__day:nth-child(2)::before {
   content: '2';
-  position: absolute;
-  font-size: 30px;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50.5%;
 }
 
 .calendar__day:nth-child(3)::before {
   content: '3';
-  position: absolute;
-  font-size: 30px;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50.5%;
 }
 
 .calendar__day:nth-child(4)::before {
   content: '4';
-  position: absolute;
-  font-size: 30px;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50.5%;
 }
 
 .calendar__day:nth-child(5)::before {
   content: '5';
-  position: absolute;
-  font-size: 30px;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50.5%;
 }
 
 .calendar__day:nth-child(6)::before {
   content: '6';
-  position: absolute;
-  font-size: 30px;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50.5%;
 }
 
 .calendar__day:nth-child(7)::before {
   content: '7';
-  position: absolute;
-  font-size: 30px;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50.5%;
 }
 
 .calendar__day:nth-child(8)::before {
   content: '8';
-  position: absolute;
-  font-size: 30px;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50.5%;
 }
 
 .calendar__day:nth-child(9)::before {
   content: '9';
-  position: absolute;
-  font-size: 30px;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50.5%;
 }
 
 .calendar__day:nth-child(10)::before {
   content: '10';
-  position: absolute;
-  font-size: 30px;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50.5%;
 }
 
 .calendar__day:nth-child(11)::before {
   content: '11';
-  position: absolute;
-  font-size: 30px;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50.5%;
 }
 
 .calendar__day:nth-child(12)::before {
   content: '12';
-  position: absolute;
-  font-size: 30px;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50.5%;
 }
 
 .calendar__day:nth-child(13)::before {
   content: '13';
-  position: absolute;
-  font-size: 30px;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50.5%;
 }
 
 .calendar__day:nth-child(14)::before {
   content: '14';
-  position: absolute;
-  font-size: 30px;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50.5%;
 }
 
 .calendar__day:nth-child(15)::before {
   content: '15';
-  position: absolute;
-  font-size: 30px;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50.5%;
 }
 
 .calendar__day:nth-child(16)::before {
   content: '16';
-  position: absolute;
-  font-size: 30px;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50.5%;
 }
 
 .calendar__day:nth-child(17)::before {
   content: '17';
-  position: absolute;
-  font-size: 30px;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50.5%;
 }
 
 .calendar__day:nth-child(18)::before {
   content: '18';
-  position: absolute;
-  font-size: 30px;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50.5%;
 }
 
 .calendar__day:nth-child(19)::before {
   content: '19';
-  position: absolute;
-  font-size: 30px;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50.5%;
 }
 
 .calendar__day:nth-child(20)::before {
   content: '20';
-  position: absolute;
-  font-size: 30px;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50.5%;
 }
 
 .calendar__day:nth-child(21)::before {
   content: '21';
-  position: absolute;
-  font-size: 30px;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50.5%;
 }
 
 .calendar__day:nth-child(22)::before {
   content: '22';
-  position: absolute;
-  font-size: 30px;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50.5%;
 }
 
 .calendar__day:nth-child(23)::before {
   content: '23';
-  position: absolute;
-  font-size: 30px;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50.5%;
 }
 
 .calendar__day:nth-child(24)::before {
   content: '24';
-  position: absolute;
-  font-size: 30px;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50.5%;
 }
 
 .calendar__day:nth-child(25)::before {
   content: '25';
-  position: absolute;
-  font-size: 30px;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50.5%;
 }
 
 .calendar__day:nth-child(26)::before {
   content: '26';
-  position: absolute;
-  font-size: 30px;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50.5%;
 }
 
 .calendar__day:nth-child(27)::before {
   content: '27';
-  position: absolute;
-  font-size: 30px;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50.5%;
 }
 
 .calendar__day:nth-child(28)::before {
   content: '28';
-  position: absolute;
-  font-size: 30px;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50.5%;
 }
 
 .calendar__day:nth-child(29)::before {
   content: '29';
-  position: absolute;
-  font-size: 30px;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50.5%;
 }
 
 .calendar__day:nth-child(30)::before {
   content: '30';
-  position: absolute;
-  font-size: 30px;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50.5%;
 }
 
 .calendar__day:nth-child(31)::before {
   content: '31';
-  position: absolute;
-  font-size: 30px;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50.5%;
 }
 
 .calendar--month-length-28 .calendar__day:nth-child(n + 29) {
