fixed hover transition

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -22,6 +22,8 @@
     justify-content: center;
     align-items: center;
     background-color: $cell-color;
+    transition-property: transform, background-color;
+    transition-duration: $transition-time;
 
     @for $day-number from 1 through 31 {
       &:nth-child(#{$day-number})::before {
@@ -37,9 +39,6 @@
         background-color: $hovere-cell-color;
         cursor: pointer;
         transform: translateY(-20px);
-        transition:
-          transform 0.5s,
-          background-color 0.5s;
       }
     }
   }
@@ -52,4 +51,3 @@
     }
   }
 }
-
