--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -8,5 +8,12 @@ $font-size: 30px;
 $hovere-cell-color: #ffbfcb;
 $calendar-height: auto;
 $calendar-width: ($cell-size + $gap) * 7 - $gap;
-$day-in-week: 'mon' 1,'tue' 2,'wed' 3,'thu' 4,'fri' 5,'sat' 6,'sun' 7;
-
+$transition-time: 0.5s;
+$day-in-week:
+  'mon' 1,
+  'tue' 2,
+  'wed' 3,
+  'thu' 4,
+  'fri' 5,
+  'sat' 6,
+  'sun' 7;
