add task solution

--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,21 +1,16 @@
 @import '../styles/variables';
 
-@function size($day-width) {
-  @return ($day-width + $gap) * 7;
-}
-
 @for $i from 1 through 31 {
   .calendar__day:nth-child(#{$i}):before {
     content: '#{$i}';
-    display: flex;
-    text-align: center;
   }
 }
 
-
 @each $day, $index in $weekdays {
-  .calendar__day--#{$day} {
-    margin-left: ($index - 1) * ($day-width + $gap);
+  .calendar--start-day-#{$day} {
+    .calendar__day:first-child {
+      margin-left: (($index - 1) * $cell-size) + (($index - 1) * $gap);
+    }
   }
 }
 
