--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,40 +3,39 @@
 
 * {
   box-sizing: border-box;
+  font-family: Arial, sans-serif;
+  font-size: $font-size;
 }
 
 body {
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100vh;
   margin: 0;
-  font-family: Arial, sans-serif;
-  font-size: $font-size;
-  display: flex;
 }
 
 .calendar {
   display: flex;
   flex-wrap: wrap;
-  gap: $gap;
-  width: size($day-width);
+  width: $width;
+  gap: 1px;
 
   &__day {
-    display: flex;
-    background: $main-color;
-    height: $day-height;
-    width: $day-width;
+    width: $cell-size;
+    height: $cell-size;
     border: 1px solid #000;
-    font-size: $font-size;
-    align-items: center;
+    background-color: $main-color;
+    display: flex;
     justify-content: center;
+    align-items: center;
+    transition-duration: 0.5s;
   }
 
   &__day:hover {
     cursor: pointer;
-    background: #ffbfcb;
+    background: $hover-color;
     transform: translateY(-20px);
-    transition-duration: 0.3s;
   }
 }
