--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,8 +1,8 @@
 $main-color: #eee;
-$day-width: 100px;
-$day-height: 100px;
+$hover-color: #ffbfcb;
+$cell-size: 100px;
 $gap: 1px;
-$padding: 10px;
+$width: (($cell-size + $gap) * 7) - $gap;
 $font-size: 30px;
 $weekdays: (mon 1, tue 2, wed 3, thu 4, fri 5, sat 6, sun 7);
 $month-lengths: 28, 29, 30, 31;
