--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,10 +1,4 @@
-$cell-size: 100px;
-$padding: 10px;
-$gap: 1px;
-$days-of-week: (mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6);
-$background-color: #eee;
-$hover-color: #ffbfcb;
-$width: (($cell-size + $gap) * 7) - $gap;
+@import '../styles/variables';
 
 body {
   margin: 0;
@@ -31,13 +25,12 @@ body {
     align-items: center;
     justify-content: center;
     display: flex;
+    font-family: Arial, sans-serif;
+    font-size: 30px;
 
     @for $i from 1 through 31 {
       &:nth-child(#{$i})::before {
         content: '#{$i}';
-        font-family: Arial, sans-serif;
-        font-size: 30px;
-        position: absolute;
       }
     }
 
