--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,7 +1,7 @@
-$cell-size: 100px;
-$gap-size: 1px;
-$padding: 10px;
-$days: (
+$frame-cell-size: 100px;
+$frame-gap-size: 1px;
+$frame-padding: 10px;
+$frame-days: (
   mon: 0,
   tue: 1,
   wed: 2,
