--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,10 +1,13 @@
 $box-size: 100px;
 $box-gap: 1px;
-$calendar-padding: 10px;
+$calendar-padding: 6px;
 $calendar-size: $box-size * 7 + $calendar-padding;
 
 body {
+  display: flex;
+  align-items: center;
   margin: 0;
+  height: 100vh;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -12,11 +15,11 @@ body {
   display: flex;
   justify-content: flex-start;
   flex-wrap: wrap;
+  margin: auto;
   gap: $box-gap;
   width: $calendar-size;
-  padding: $calendar-padding;
 
-  &_block {
+  &__day {
     box-sizing: border-box;
     width: 100px;
     height: 100px;
@@ -29,29 +32,29 @@ body {
     transition: 0.5s;
   }
 
-  &_block:hover {
+  &__day:hover {
     background-color: pink;
     cursor: pointer;
     transform: translateY(-20px);
   }
 }
 
-$days-of-week: ('mon' 0, 'tue' 1, 'wed' 2, 'thu' 3, 'fri' 4, 'sat' 5, 'san' 6);
+$days-of-week: ('mon' 0, 'tue' 1, 'wed' 2, 'thu' 3, 'fri' 4, 'sat' 5, 'sun' 6);
 
 @each $day, $number in $days-of-week {
-  .calendar--start-day--#{$day} .calendar_block:nth-child(1) {
+  .calendar--start-day-#{$day} .calendar__day:nth-child(1) {
     margin-left: $number * ($box-size + $box-gap);
   }
 }
 
 @for $i from 28 to 31 {
-  .calendar--month-length--#{$i} .calendar_block:nth-child(n + #{$i + 1}) {
+  .calendar--month-length-#{$i} .calendar__day:nth-child(n + #{$i + 1}) {
     display: none;
   }
 }
 
 @for $number from 1 to 32 {
-  .calendar_block:nth-child(n + #{$number})::before {
+  .calendar__day:nth-child(n + #{$number})::before {
     content: '#{$number}';
   }
 }
