--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,4 @@
 @import './utils/variables';
 @import './blocks/page';
 @import './blocks/main';
-@import './blocks/cell';
+@import './blocks/calendar';
