--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,39 +1,8 @@
+@import './reset';
 @import './utils/variables';
 
-$padding: 10px;
-$gap: 1px;
-$total-gap: $gap * 8;
-$square-side: 100px;
-$line-width: ($square-side * 7) + ($padding * 2) + $total-gap;
-$day-of-the-week: (
-  'mon': 0,
-  'tue': (
-    ($square-side + $gap),
-  ),
-  'wed': (
-    ($square-side + $gap) * 2,
-  ),
-  'thu': (
-    ($square-side + $gap) * 3,
-  ),
-  'fri': (
-    ($square-side + $gap) * 4,
-  ),
-  'sat': (
-    ($square-side + $gap) * 5,
-  ),
-  'sun': (
-    ($square-side + $gap) * 6,
-  ),
-);
-
-body {
-  margin: 0;
-}
-
 .wrapper {
-  width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -42,10 +11,10 @@ body {
 .calendar {
   display: flex;
   flex-wrap: wrap;
-  gap: $gap;
-  box-sizing: border-box;
-  padding: $padding;
-  width: $line-width;
+  gap: $gap-between-days;
+  padding: $calendar-padding;
+  width: $calendar-width;
+  font-family: Arial, sans-serif;
 
   transform: translateX(1px);
 
@@ -55,11 +24,13 @@ body {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    width: $square-side;
-    height: $square-side;
+    width: $day-square-side;
+    height: $day-square-side;
     background-color: $grey;
     border: 1px solid #000;
     transition: transform 0.5s;
+    font-size: 30px;
+
     &:hover {
       cursor: pointer;
       background-color: $pink;
@@ -74,10 +45,9 @@ body {
       & :nth-child(#{$j}) {
         display: block;
         position: relative;
+
         &::before {
           content: '#{$j}';
-          font-size: 30px;
-          font-family: Arial, sans-serif;
           position: absolute;
           top: 50%;
           left: 50%;
