--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,7 +15,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   gap: 1px;
-  font-family: Arial, sans-serif;
+  font-family: $main-font;
   font-size: 30px;
 
   &__day {
@@ -27,15 +27,15 @@ body {
     width: $day-width;
     height: $day-height;
 
-    background-color: #eee;
-    border: solid 1px #000;
+    background-color: $background-color;
+    border: solid 1px $border-color;
     cursor: pointer;
 
     transition: background-color $transition-duration,
       transform $transition-duration;
 
     &:hover {
-      background-color: #FFBFCB;
+      background-color: $hover-color;
       transform: translateY(-20px);
     }
 
