--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,3 +1,7 @@
+$main-font: Arial, sans-serif;
+$background-color: #eee;
+$border-color: #000;
+$hover-color: #ffbfcb;
 $day-width: 100px;
 $day-height: 100px;
 $days-gap-size: 1;
