--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,21 +1,12 @@
-$cell-size: 100px;
-
-body {
-  font-family: Arial, Helvetica, sans-serif;
-  margin: 0;
-}
+@import './variables';
 
 .calendar {
   width: calc(7 * #{$cell-size} + 6px);
   margin: 0 auto;
   margin-top: 82px;
-  box-sizing: border-box;
-
-  &__field {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1px;
-  }
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1px;
 
   &__day {
     position: relative;
@@ -25,24 +16,14 @@ body {
     border: 1px solid #000;
     background: #eee;
     cursor: pointer;
-    transition: transform background 0.5s;
+    transition: transform 0.5s background 0.5s;
 
     &:hover {
       transform: translateY(-20px);
       background: #ffc0cb;
     }
 
-    @for $i from 0 through 31 {
-      .calendar--month-length-#{$i} {
-        content: '#{$i}';
-        height: $cell-size;
-        font-family: Arial, sans-serif;
-        font-size: 30px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-
+    @for $i from 1 through 31 {
       &:nth-child(#{$i})::before {
         content: '#{$i}';
         height: $cell-size;
@@ -55,18 +36,8 @@ body {
     }
   }
 
-  $days: (
-    'mon': 1,
-    'tue': 2,
-    'wed': 3,
-    'thu': 4,
-    'fri': 5,
-    'sat': 6,
-    'sun': 7,
-  );
-
   @for $i from 28 through 31 {
-    &--month-length-#{$i} {
+    &--month-length--#{$i} {
       .calendar__day:nth-child(n + #{$i + 1}) {
         display: none;
       }
@@ -74,7 +45,7 @@ body {
   }
 
   @each $name, $day in $days {
-    &--start-day-#{$name} .calendar__day:first-child {
+    &--start-day--#{$name} .calendar__day:first-child {
       margin-left: ($cell-size + 1) * ($day - 1);
     }
   }
