add task solution

--- a/src/styles/blocks/variables.scss
+++ b/src/styles/blocks/variables.scss
@@ -1,4 +1,6 @@
-$sizeOfBlocks: 100px;
+$sizeOfBlocksV: 100px;
+$sizeOfBlocksH: 100px;
+$width-calendar: 7 * $sizeOfBlocksV + 26px;
 $gap: 1px;
 $numberOfDays: (
   mon: 0,
