--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -3,21 +3,18 @@
   flex-wrap: wrap;
   gap: $gap;
   padding: 10px;
-  max-width: 802px;
-  margin-left: 300px;
-  margin-top: 30px;
+  width: $width-calendar;
+  max-width: 800px;
+  margin-top: 40px;
 
   &__day {
+    box-sizing: border-box;
     background-color: #eee;
-    height: $sizeOfBlocks;
-    width: $sizeOfBlocks;
+    height: $sizeOfBlocksV;
+    width: $sizeOfBlocksH;
     border: 1px solid black;
     cursor: pointer;
     transition: transform 0.5s ease;
-
-    &:first-child {
-      margin-left: 615px;
-    }
 
     &:hover {
       background-color: #ffbfcb;
@@ -34,21 +31,19 @@
         font-size: 30px;
       }
     }
+  }
+}
 
-    @for $i from 28 through 31 {
-      &--month-length-#{$i} {
-        &:nth-child(#{$i}) {
-          display: none;
-        }
-      }
+@for $i from 28 through 31 {
+  .calendar--month-length-#{$i} {
+    .calendar__day:nth-child(n + #{$i + 1}) {
+      display: none;
     }
+  }
+}
 
-    @each $day, $num in $numberOfDays {
-      &--start-day--#{$day} {
-        .calendar__day:first-child {
-          margin-left: ($sizeOfBlocks + $gap) * $num;
-        }
-      }
-    }
+@each $day, $index in $numberOfDays {
+  .calendar--start-day-#{$day} .calendar__day:first-child {
+    margin-left: $index * 101;
   }
 }
