add task solution

--- a/src/styles/blocks/variables.scss
+++ b/src/styles/blocks/variables.scss
@@ -1,6 +1,7 @@
+$day-size: 100px;
 $sizeOfBlocksV: 100px;
 $sizeOfBlocksH: 100px;
-$width-calendar: 7 * $sizeOfBlocksV + 26px;
+$width-calendar: 7 * $day-size + 26px;
 $gap: 1px;
 $numberOfDays: (
   mon: 0,
