--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -4,8 +4,8 @@
   gap: $gap;
   padding: 10px;
   width: $width-calendar;
-  max-width: 800px;
   margin-top: 40px;
+  box-sizing: border-box;
 
   &__day {
     box-sizing: border-box;
