--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,71 @@
+$week: (
+  'mon': 0,
+  'tue': 1,
+  'wed': 2,
+  'thu': 3,
+  'fri': 4,
+  'sat': 5,
+  'sun': 6,
+);
+
 body {
   margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.calendar {
+  box-sizing: border-box;
+  width: 726px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1px;
+  padding: 10px;
+
+  &__day {
+    display: flex;
+    position: relative;
+    width: 100px;
+    height: 100px;
+    box-sizing: border-box;
+    background-color: #eee;
+    border: 1px solid #000;
+    align-items: center;
+    justify-content: center;
+    transition-duration: 0.5s;
+
+    @for $i from 1 through 31 {
+      &:nth-child(#{$i}) {
+        &::before {
+          content: '#{$i}';
+          font-family: Arial, Helvetica, sans-serif;
+          font-size: 30px;
+        }
+      }
+    }
+
+    &:hover {
+      cursor: pointer;
+      background-color: #ffbfcb;
+      transform: translateY(-20px);
+    }
+  }
+
+  @each $day, $value in $week {
+    &--start-day-#{$day} {
+      .calendar__day:first-child {
+        margin-left: calc(101px * $value);
+      }
+    }
+
+    @for $i from 28 through 31 {
+      &--month-length-#{$i} {
+        .calendar__day:nth-child(n + #{$i + 1}) {
+          display: none;
+        }
+      }
+    }
+  }
 }
