--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,69 @@
-body {
+@import './utils/variables';
+
+* {
   margin: 0;
+  padding: 0;
+
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.calendar {
+  width: ($day-size * $days-amount) + ($day-gap * ($days-amount - 1));
+
+  display: flex;
+  flex-wrap: wrap;
+
+  gap: $day-gap;
+
+  padding: $calendar-padding;
+
+  &__day {
+    width: $day-size;
+    height: $day-size;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+
+    border: 1px solid #000;
+    font-size: 30px;
+    color: #000;
+    background-color: #eee;
+
+    transition-duration: 0.5s;
+
+    &:hover {
+      transform: translateY(-20px);
+      background-color: #ffbfcb;
+      cursor: pointer;
+    }
+
+    @for $i from 1 through 31 {
+      &:nth-child(#{$i}) {
+        &::before {
+          content: '#{$i}';
+        }
+      }
+    }
+  }
+
+  @each $day, $indentation in $days {
+    &--start-day-#{$day} :first-child {
+      margin-left: ($day-size * $indentation) + ($day-gap * $indentation);
+    }
+  }
+
+  @for $i from 28 through 31 {
+    &--month-length-#{$i} .calendar__day:nth-child(n + #{$i + 1}) {
+      display: none;
+    }
+  }
 }
