--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,6 +7,11 @@ $week: (
   'sat': 5,
   'sun': 6,
 );
+$day-size: 100px;
+$day-border: 1px solid #000;
+$calendar-gap: 1px;
+$calendar-padding: 10px;
+$calendar-width: ($day-size * 7) + (6 * $calendar-gap) + (2 * $calendar-padding);
 
 body {
   margin: 0;
@@ -18,20 +23,20 @@ body {
 
 .calendar {
   box-sizing: border-box;
-  width: 726px;
+  width: $calendar-width;
   display: flex;
   flex-wrap: wrap;
-  gap: 1px;
-  padding: 10px;
+  gap: $calendar-gap;
+  padding: $calendar-padding;
 
   &__day {
     display: flex;
     position: relative;
-    width: 100px;
-    height: 100px;
+    width: $day-size;
+    height: $day-size;
     box-sizing: border-box;
     background-color: #eee;
-    border: 1px solid #000;
+    border: $day-border;
     align-items: center;
     justify-content: center;
     transition-duration: 0.5s;
@@ -54,14 +59,14 @@ body {
   }
 
   @each $day, $value in $week {
-    &--start-day-#{$day} {
+    &--start-day--#{$day} {
       .calendar__day:first-child {
-        margin-left: calc(101px * $value);
+        margin-left: ($day-size + $calendar-gap) * $value;
       }
     }
 
     @for $i from 28 through 31 {
-      &--month-length-#{$i} {
+      &--month-length--#{$i} {
         .calendar__day:nth-child(n + #{$i + 1}) {
           display: none;
         }
