--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -59,14 +59,14 @@ body {
   }
 
   @each $day, $value in $week {
-    &--start-day--#{$day} {
+    &--start-day-#{$day} {
       .calendar__day:first-child {
-        margin-left: ($day-size + $calendar-gap) * $value;
+        margin-left: (($day-size + $calendar-gap) * $value);
       }
     }
 
     @for $i from 28 through 31 {
-      &--month-length--#{$i} {
+      &--month-length-#{$i} {
         .calendar__day:nth-child(n + #{$i + 1}) {
           display: none;
         }
