--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,28 +1,36 @@
 @import './utils/variables';
 
-* {
-  margin: 0;
-  padding: 0;
+html {
+  box-sizing: border-box;
+}
 
-  font-family: Arial, Helvetica, sans-serif;
+*,
+*::after,
+*::before {
+  box-sizing: inherit;
 }
 
 .page {
+  margin: 0;
+  padding: 0;
+
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  min-height: 100vh;
+
+  font-family: Arial, sans-serif;
 }
 
 .calendar {
-  width: ($day-size * $days-amount) + ($day-gap * ($days-amount - 1));
+  width: ($day-size * 7) + ($day-gap * (7 - 1)) + (2 * $cal-padding);
 
   display: flex;
   flex-wrap: wrap;
 
   gap: $day-gap;
 
-  padding: $calendar-padding;
+  padding: $cal-padding;
 
   &__day {
     width: $day-size;
@@ -31,7 +39,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    box-sizing: border-box;
 
     border: 1px solid #000;
     font-size: 30px;
@@ -47,10 +54,8 @@
     }
 
     @for $i from 1 through 31 {
-      &:nth-child(#{$i}) {
-        &::before {
-          content: '#{$i}';
-        }
+      &:nth-child(#{$i})::before {
+        content: '#{$i}';
       }
     }
   }
