--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,7 +1,6 @@
-$days-amount: 7;
 $day-size: 100px;
 $day-gap: 1px;
-$calendar-padding: 10px;
+$cal-padding: 10px;
 $days: (
   'mon': 0,
   'tue': 1,
