minor variable fixes and improvements

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -23,14 +23,14 @@ html {
 }
 
 .calendar {
-  width: ($day-size * 7) + ($day-gap * (7 - 1)) + (2 * $cal-padding);
+  width: ($day-size * 7) + ($day-gap * 6) + ($calendar-padding * 2);
 
   display: flex;
   flex-wrap: wrap;
 
   gap: $day-gap;
 
-  padding: $cal-padding;
+  padding: $calendar-padding;
 
   &__day {
     width: $day-size;
