--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,11 +1,12 @@
-$days:
- mon 1,
- tue 2,
- wed 3,
- thu 4,
- fri 5,
- sat 6,
- sun 7;
+$days: (
+  'mon': 1,
+  'tue': 2,
+  'wed': 3,
+  'thu': 4,
+  'fri': 5,
+  'sat': 6,
+  'sun': 7,
+);
 $cell-size: 100px;
 $border-color: #000;
 $background-color: #eee;
