--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,78 @@
+$weekdays: mon, tue, wed, thu, fri, sat, sun;
+$days: 31;
+
+@for $i from 28 through 31 {
+  .calendar--month-length-#{$i} {
+    @for $j from 1 through $i {
+      & :nth-child(#{$j}) {
+        display: block;
+        position: relative;
+
+        &::before {
+          content: '#{$j}';
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+        }
+      }
+    }
+  }
+}
+
+@each $day, $margin in $weekdays {
+  .calendar--start-day-#{$day} {
+    .day__calendar:first-of-type {
+      margin-left: #{$margin};
+    }
+  }
+}
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
+  padding: 0;
+}
+
+.main-main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.main-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 800px;
+  height: 700px;
+}
+
+.calendar {
+  padding: 10px;
+  display: flex;
+  gap: 1px;
+  text-align: center;
+  flex-wrap: wrap;
+}
+
+.calendar__day--calendar {
+  height: 100px;
+  width: 100px;
+  background-color: #eee;
+  border: 1px solid #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+}
+
+.calendar__day--calendar:hover {
+  background-color: #ffbfcb;
+  cursor: pointer;
 }
