add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -62,7 +62,7 @@ $month-length: 31;
   // Modifier for start day
   @each $day in $start-days {
     &--start-day-#{$day} {
-      /* stylelint-disable */
+      /* stylelint-disable */ // Треба бо по іншому не працює!!
       $start-column: index($start-days, $day);
       /* stylelint-enable */
       .calendar__day:first-child {
