add all changes

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,12 +1,3 @@
-* {
-  box-sizing: border-box;
-}
-
-html {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-}
-
 body {
   margin: 0;
   display: flex;
@@ -23,197 +14,466 @@ body {
   margin: auto;
 }
 
-.calendar:nth-child(7n) {
-  margin-top: 0;
-  padding-left: 1px;
-}
-
-.calendar .calendar__day {
-  width: 100px;
-  height: 100px;
+.calendar__day {
+  box-sizing: border-box;
   background-color: #eee;
-  border: 1px solid #000;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
+  height: 100px;
+  width: 100px;
+  border: 1px solid black;
   transition: all 0.5s;
-  cursor: pointer;
-  padding-left: 1px;
 }
 
-.calendar .calendar__day:nth-child(1)::before {
-  content: '1';
-}
-
-.calendar .calendar__day:nth-child(2)::before {
-  content: '2';
-}
-
-.calendar .calendar__day:nth-child(3)::before {
-  content: '3';
-}
-
-.calendar .calendar__day:nth-child(4)::before {
-  content: '4';
-}
-
-.calendar .calendar__day:nth-child(5)::before {
-  content: '5';
-}
-
-.calendar .calendar__day:nth-child(6)::before {
-  content: '6';
-}
-
-.calendar .calendar__day:nth-child(7)::before {
-  content: '7';
-}
-
-.calendar .calendar__day:nth-child(8)::before {
-  content: '8';
-}
-
-.calendar .calendar__day:nth-child(9)::before {
-  content: '9';
-}
-
-.calendar .calendar__day:nth-child(10)::before {
-  content: '10';
-}
-
-.calendar .calendar__day:nth-child(11)::before {
-  content: '11';
-}
-
-.calendar .calendar__day:nth-child(12)::before {
-  content: '12';
-}
-
-.calendar .calendar__day:nth-child(13)::before {
-  content: '13';
-}
-
-.calendar .calendar__day:nth-child(14)::before {
-  content: '14';
-}
-
-.calendar .calendar__day:nth-child(15)::before {
-  content: '15';
-}
-
-.calendar .calendar__day:nth-child(16)::before {
-  content: '16';
-}
-
-.calendar .calendar__day:nth-child(17)::before {
-  content: '17';
-}
-
-.calendar .calendar__day:nth-child(18)::before {
-  content: '18';
-}
-
-.calendar .calendar__day:nth-child(19)::before {
-  content: '19';
-}
-
-.calendar .calendar__day:nth-child(20)::before {
-  content: '20';
-}
-
-.calendar .calendar__day:nth-child(21)::before {
-  content: '21';
-}
-
-.calendar .calendar__day:nth-child(22)::before {
-  content: '22';
-}
-
-.calendar .calendar__day:nth-child(23)::before {
-  content: '23';
-}
-
-.calendar .calendar__day:nth-child(24)::before {
-  content: '24';
-}
-
-.calendar .calendar__day:nth-child(25)::before {
-  content: '25';
-}
-
-.calendar .calendar__day:nth-child(26)::before {
-  content: '26';
-}
-
-.calendar .calendar__day:nth-child(27)::before {
-  content: '27';
-}
-
-.calendar .calendar__day:nth-child(28)::before {
-  content: '28';
-}
-
-.calendar .calendar__day:nth-child(29)::before {
-  content: '29';
-}
-
-.calendar .calendar__day:nth-child(30)::before {
-  content: '30';
-}
-
-.calendar .calendar__day:nth-child(31)::before {
-  content: '31';
-}
-
-.calendar .calendar__day:hover {
+.calendar__day:hover {
   background-color: #ffbfcb;
   transform: translateY(-20px);
   cursor: pointer;
 }
 
-.calendar--start-day-mon > :first-child {
+.calendar :nth-child(1) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar :nth-child(1)::before {
+  padding-left: 1px;
+  content: '1';
+  font-family: Arial, sans-serif;
+  font-size: 30px;
+}
+
+.calendar :nth-child(2) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar :nth-child(2)::before {
+  padding-left: 1px;
+  content: '2';
+  font-family: Arial, sans-serif;
+  font-size: 30px;
+}
+
+.calendar :nth-child(3) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar :nth-child(3)::before {
+  padding-left: 1px;
+  content: '3';
+  font-family: Arial, sans-serif;
+  font-size: 30px;
+}
+
+.calendar :nth-child(4) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar :nth-child(4)::before {
+  padding-left: 1px;
+  content: '4';
+  font-family: Arial, sans-serif;
+  font-size: 30px;
+}
+
+.calendar :nth-child(5) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar :nth-child(5)::before {
+  padding-left: 1px;
+  content: '5';
+  font-family: Arial, sans-serif;
+  font-size: 30px;
+}
+
+.calendar :nth-child(6) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar :nth-child(6)::before {
+  padding-left: 1px;
+  content: '6';
+  font-family: Arial, sans-serif;
+  font-size: 30px;
+}
+
+.calendar :nth-child(7) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar :nth-child(7)::before {
+  padding-left: 1px;
+  content: '7';
+  font-family: Arial, sans-serif;
+  font-size: 30px;
+}
+
+.calendar :nth-child(8) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar :nth-child(8)::before {
+  padding-left: 1px;
+  content: '8';
+  font-family: Arial, sans-serif;
+  font-size: 30px;
+}
+
+.calendar :nth-child(9) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar :nth-child(9)::before {
+  padding-left: 1px;
+  content: '9';
+  font-family: Arial, sans-serif;
+  font-size: 30px;
+}
+
+.calendar :nth-child(10) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar :nth-child(10)::before {
+  padding-left: 1px;
+  content: '10';
+  font-family: Arial, sans-serif;
+  font-size: 30px;
+}
+
+.calendar :nth-child(11) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar :nth-child(11)::before {
+  padding-left: 1px;
+  content: '11';
+  font-family: Arial, sans-serif;
+  font-size: 30px;
+}
+
+.calendar :nth-child(12) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar :nth-child(12)::before {
+  padding-left: 1px;
+  content: '12';
+  font-family: Arial, sans-serif;
+  font-size: 30px;
+}
+
+.calendar :nth-child(13) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar :nth-child(13)::before {
+  padding-left: 1px;
+  content: '13';
+  font-family: Arial, sans-serif;
+  font-size: 30px;
+}
+
+.calendar :nth-child(14) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar :nth-child(14)::before {
+  padding-left: 1px;
+  content: '14';
+  font-family: Arial, sans-serif;
+  font-size: 30px;
+}
+
+.calendar :nth-child(15) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar :nth-child(15)::before {
+  padding-left: 1px;
+  content: '15';
+  font-family: Arial, sans-serif;
+  font-size: 30px;
+}
+
+.calendar :nth-child(16) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar :nth-child(16)::before {
+  padding-left: 1px;
+  content: '16';
+  font-family: Arial, sans-serif;
+  font-size: 30px;
+}
+
+.calendar :nth-child(17) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar :nth-child(17)::before {
+  padding-left: 1px;
+  content: '17';
+  font-family: Arial, sans-serif;
+  font-size: 30px;
+}
+
+.calendar :nth-child(18) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar :nth-child(18)::before {
+  padding-left: 1px;
+  content: '18';
+  font-family: Arial, sans-serif;
+  font-size: 30px;
+}
+
+.calendar :nth-child(19) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar :nth-child(19)::before {
+  padding-left: 1px;
+  content: '19';
+  font-family: Arial, sans-serif;
+  font-size: 30px;
+}
+
+.calendar :nth-child(20) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar :nth-child(20)::before {
+  padding-left: 1px;
+  content: '20';
+  font-family: Arial, sans-serif;
+  font-size: 30px;
+}
+
+.calendar :nth-child(21) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar :nth-child(21)::before {
+  padding-left: 1px;
+  content: '21';
+  font-family: Arial, sans-serif;
+  font-size: 30px;
+}
+
+.calendar :nth-child(22) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar :nth-child(22)::before {
+  padding-left: 1px;
+  content: '22';
+  font-family: Arial, sans-serif;
+  font-size: 30px;
+}
+
+.calendar :nth-child(23) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar :nth-child(23)::before {
+  padding-left: 1px;
+  content: '23';
+  font-family: Arial, sans-serif;
+  font-size: 30px;
+}
+
+.calendar :nth-child(24) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar :nth-child(24)::before {
+  padding-left: 1px;
+  content: '24';
+  font-family: Arial, sans-serif;
+  font-size: 30px;
+}
+
+.calendar :nth-child(25) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar :nth-child(25)::before {
+  padding-left: 1px;
+  content: '25';
+  font-family: Arial, sans-serif;
+  font-size: 30px;
+}
+
+.calendar :nth-child(26) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar :nth-child(26)::before {
+  padding-left: 1px;
+  content: '26';
+  font-family: Arial, sans-serif;
+  font-size: 30px;
+}
+
+.calendar :nth-child(27) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar :nth-child(27)::before {
+  padding-left: 1px;
+  content: '27';
+  font-family: Arial, sans-serif;
+  font-size: 30px;
+}
+
+.calendar :nth-child(28) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar :nth-child(28)::before {
+  padding-left: 1px;
+  content: '28';
+  font-family: Arial, sans-serif;
+  font-size: 30px;
+}
+
+.calendar :nth-child(29) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar :nth-child(29)::before {
+  padding-left: 1px;
+  content: '29';
+  font-family: Arial, sans-serif;
+  font-size: 30px;
+}
+
+.calendar :nth-child(30) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar :nth-child(30)::before {
+  padding-left: 1px;
+  content: '30';
+  font-family: Arial, sans-serif;
+  font-size: 30px;
+}
+
+.calendar :nth-child(31) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar :nth-child(31)::before {
+  padding-left: 1px;
+  content: '31';
+  font-family: Arial, sans-serif;
+  font-size: 30px;
+}
+
+.calendar--month-length-28 .calendar__day:nth-child(n + 29) {
+  display: none;
+}
+
+.calendar--month-length-29 .calendar__day:nth-child(n + 30) {
+  display: none;
+}
+
+.calendar--month-length-30 .calendar__day:nth-child(n + 31) {
+  display: none;
+}
+
+.calendar--month-length-31 .calendar__day:nth-child(n + 32) {
+  display: none;
+}
+
+.calendar--start-day-mon .calendar__day:first-child {
   margin-left: 0;
 }
 
-.calendar--start-day-tue > :first-child {
+.calendar--start-day-tue .calendar__day:first-child {
   margin-left: 101px;
 }
 
-.calendar--start-day-wed > :first-child {
+.calendar--start-day-wed .calendar__day:first-child {
   margin-left: 202px;
 }
 
-.calendar--start-day-thu > :first-child {
+.calendar--start-day-thu .calendar__day:first-child {
   margin-left: 303px;
 }
 
-.calendar--start-day-fri > :first-child {
+.calendar--start-day-fri .calendar__day:first-child {
   margin-left: 404px;
 }
 
-.calendar--start-day-sat > :first-child {
+.calendar--start-day-sat .calendar__day:first-child {
   margin-left: 505px;
 }
 
-.calendar--start-day-sun > :first-child {
+.calendar--start-day-sun .calendar__day:first-child {
   margin-left: 606px;
-}
-
-.calendar--month-length-28 :nth-child(n + 29) {
-  display: none;
-}
-
-.calendar--month-length-29 :nth-child(n + 30) {
-  display: none;
-}
-
-.calendar--month-length-30 :nth-child(n + 31) {
-  display: none;
-}
-
-.calendar--month-length-31 :nth-child(n + 32) {
-  display: none;
 }
 
 /*# sourceMappingURL=main.css.map */
