--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,11 +1,7 @@
-* {
-  box-sizing: border-box;
-}
-
-html {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-}
+$cell-size: 100px;
+$border-width: 1px;
+$font-size: 30px;
+$gap: 1px;
 
 body {
   margin: 0;
@@ -16,202 +12,57 @@ body {
 }
 
 .calendar {
-  gap: 1px;
+  gap: $gap;
   display: flex;
   flex-wrap: wrap;
   width: 707px;
   margin: auto;
-}
 
-.calendar:nth-child(7n) {
-  margin-top: 0;
-  padding-left: 1px;
-}
+  &__day {
+    box-sizing: border-box;
+    background-color: #eee;
+    height: $cell-size;
+    width: $cell-size;
+    border: $border-width solid black;
+    transition: all 0.5s;
 
-.calendar .calendar__day {
-  width: 100px;
-  height: 100px;
-  background-color: #eee;
-  border: 1px solid #000;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  transition: all 0.5s;
-  cursor: pointer;
-  padding-left: 1px;
-}
+    &:hover {
+      background-color: #ffbfcb;
+      transform: translateY(-20px);
+      cursor: pointer;
+    }
+  }
 
-.calendar .calendar__day:nth-child(1)::before {
-  content: '1';
-}
+  @for $index from 1 through 31 {
+    & :nth-child(#{$index}) {
+      display: flex;
+      justify-content: center;
+      align-items: center;
 
-.calendar .calendar__day:nth-child(2)::before {
-  content: '2';
-}
+      &::before {
+        padding-left: 1px;
+        content: '#{$index}';
+        font-family: Arial, sans-serif;
+        font-size: $font-size;
+      }
+    }
+  }
 
-.calendar .calendar__day:nth-child(3)::before {
-  content: '3';
-}
+  @for $i from 28 through 31 {
+    &--month-length-#{$i} {
+      .calendar__day:nth-child(n + #{$i + 1}) {
+        display: none;
+      }
+    }
+  }
 
-.calendar .calendar__day:nth-child(4)::before {
-  content: '4';
-}
-
-.calendar .calendar__day:nth-child(5)::before {
-  content: '5';
-}
-
-.calendar .calendar__day:nth-child(6)::before {
-  content: '6';
-}
-
-.calendar .calendar__day:nth-child(7)::before {
-  content: '7';
-}
-
-.calendar .calendar__day:nth-child(8)::before {
-  content: '8';
-}
-
-.calendar .calendar__day:nth-child(9)::before {
-  content: '9';
-}
-
-.calendar .calendar__day:nth-child(10)::before {
-  content: '10';
-}
-
-.calendar .calendar__day:nth-child(11)::before {
-  content: '11';
-}
-
-.calendar .calendar__day:nth-child(12)::before {
-  content: '12';
-}
-
-.calendar .calendar__day:nth-child(13)::before {
-  content: '13';
-}
-
-.calendar .calendar__day:nth-child(14)::before {
-  content: '14';
-}
-
-.calendar .calendar__day:nth-child(15)::before {
-  content: '15';
-}
-
-.calendar .calendar__day:nth-child(16)::before {
-  content: '16';
-}
-
-.calendar .calendar__day:nth-child(17)::before {
-  content: '17';
-}
-
-.calendar .calendar__day:nth-child(18)::before {
-  content: '18';
-}
-
-.calendar .calendar__day:nth-child(19)::before {
-  content: '19';
-}
-
-.calendar .calendar__day:nth-child(20)::before {
-  content: '20';
-}
-
-.calendar .calendar__day:nth-child(21)::before {
-  content: '21';
-}
-
-.calendar .calendar__day:nth-child(22)::before {
-  content: '22';
-}
-
-.calendar .calendar__day:nth-child(23)::before {
-  content: '23';
-}
-
-.calendar .calendar__day:nth-child(24)::before {
-  content: '24';
-}
-
-.calendar .calendar__day:nth-child(25)::before {
-  content: '25';
-}
-
-.calendar .calendar__day:nth-child(26)::before {
-  content: '26';
-}
-
-.calendar .calendar__day:nth-child(27)::before {
-  content: '27';
-}
-
-.calendar .calendar__day:nth-child(28)::before {
-  content: '28';
-}
-
-.calendar .calendar__day:nth-child(29)::before {
-  content: '29';
-}
-
-.calendar .calendar__day:nth-child(30)::before {
-  content: '30';
-}
-
-.calendar .calendar__day:nth-child(31)::before {
-  content: '31';
-}
-
-.calendar .calendar__day:hover {
-  background-color: #ffbfcb;
-  transform: translateY(-20px);
-  cursor: pointer;
-}
-
-.calendar--start-day-mon > :first-child {
-  margin-left: 0;
-}
-
-.calendar--start-day-tue > :first-child {
-  margin-left: 101px;
-}
-
-.calendar--start-day-wed > :first-child {
-  margin-left: 202px;
-}
-
-.calendar--start-day-thu > :first-child {
-  margin-left: 303px;
-}
-
-.calendar--start-day-fri > :first-child {
-  margin-left: 404px;
-}
-
-.calendar--start-day-sat > :first-child {
-  margin-left: 505px;
-}
-
-.calendar--start-day-sun > :first-child {
-  margin-left: 606px;
-}
-
-.calendar--month-length-28 :nth-child(n + 29) {
-  display: none;
-}
-
-.calendar--month-length-29 :nth-child(n + 30) {
-  display: none;
-}
-
-.calendar--month-length-30 :nth-child(n + 31) {
-  display: none;
-}
-
-.calendar--month-length-31 :nth-child(n + 32) {
-  display: none;
+  @each $keyof, $day in (sun 1), (mon 2), (tue 3), (wed 4), (thu 5), (fri 6),
+    (sat 7)
+  {
+    &--start-day-#{$day} {
+      .calendar__day:first-child {
+        margin-left: calc((#{$keyof} - 1) * (#{$cell-size} + #{$gap}));
+      }
+    }
+  }
 }
