--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -18,7 +18,7 @@ body {
   gap: 1px;
   padding: $month__padding;
 
-  min-width: $day__size * 7 + $month__padding * 2 + $day__margin * 6;
+  width: $day__size * 7 + $month__padding * 2 + $day__margin * 6;
 
   &__day {
     display: block;
