--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,6 +12,27 @@ body {
   padding: 0;
 }
 
+li {
+  list-style: none;
+}
+
+$font-family-days: Arial, Helvetica, sans-serif;
+$font-size-days: 30px;
+$color-standart: #eee;
+$color-hover: #ffbfcb;
+$box-size: 100px;
+$callendar-width: 726px;
+$box-gap: 1px;
+$days: (
+  'mon': 0,
+  'tue': 101,
+  'wed': 202,
+  'thu': 303,
+  'fri': 404,
+  'sat': 505,
+  'sun': 606,
+);
+
 .container {
   display: flex;
   justify-content: center;
@@ -22,43 +43,35 @@ body {
 .calendar {
   display: flex;
   flex-wrap: wrap;
-  gap: 1px;
+  gap: $box-gap;
   padding: 0 10px;
-  width: 726px;
+  width: $callendar-width;
 
   &__day {
     display: flex;
     justify-content: center;
     align-items: center;
 
-    background-color: #eee;
-    height: 100px;
-    width: 100px;
+    background-color: $color-standart;
+    height: $box-size;
+    width: $box-size;
     border: 1px solid black;
     cursor: pointer;
     transition: 0.5s;
 
     &:hover {
       transform: translateY(-20px);
-      background-color: #ffbfcb;
+      background-color: $color-hover;
     }
   }
 
   @for $i from 1 through 31 {
     &__day:nth-child(#{$i})::before {
+      font-size: $font-size-days;
+      font-family: $font-family-days;
       content: '#{$i}';
     }
   }
-
-  $days: (
-    'mon': 0,
-    'tue': 101,
-    'wed': 202,
-    'thu': 303,
-    'fri': 404,
-    'sat': 505,
-    'sun': 606,
-  );
 
   @each $day, $margin in $days {
     &--start-day-#{$day} :first-child {
