--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -6,7 +6,7 @@
   width: 7 * $day-size + 2 * $calendar-padding + 6 * $calendar-gap;
 
   @each $day-number, $week-day in $week-days {
-    &--start-day--#{$week-day} :first-child {
+    &--start-day-#{$week-day} :first-child {
       margin-left: $day-number * $day-size + $day-number * $calendar-gap;
     }
   }
@@ -36,7 +36,7 @@
   }
 
   @for $days from 28 to 32 {
-    &--month-length--#{$days} &__day {
+    &--month-length-#{$days} &__day {
       @for $day from $days + 1 to 32 {
         &:nth-child(#{$day}) {
           height: 0;
