--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -3,5 +3,9 @@
 
   &__body {
     margin: 0;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
