--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,5 @@
+@import 'variables';
+
 * {
   box-sizing: border-box;
 }
@@ -15,23 +17,6 @@ body {
 li {
   list-style: none;
 }
-
-$font-family-days: Arial, Helvetica, sans-serif;
-$font-size-days: 30px;
-$color-standart: #eee;
-$color-hover: #ffbfcb;
-$box-size: 100px;
-$callendar-width: 726px;
-$box-gap: 1px;
-$days: (
-  'mon': 0,
-  'tue': 101,
-  'wed': 202,
-  'thu': 303,
-  'fri': 404,
-  'sat': 505,
-  'sun': 606,
-);
 
 .container {
   display: flex;
