organized scss files_

--- a/src/styles/variables/variables.scss
+++ b/src/styles/variables/variables.scss
@@ -12,3 +12,4 @@ $daysPerWeek: 7;
 $gap: 1px;
 $innerIdentation: 10px;
 $width: $cellWidth * $daysPerWeek + $gap * ($daysPerWeek - 1);
+$borderWidth: 1px;
