--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,27 +1,16 @@
 @import './variables/variables';
-
-.page__body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
+@import './colors/colors-variables';
 
 .calendar {
   display: flex;
-  gap: $gap;
   flex-wrap: wrap;
+  gap: $gap;
   width: $width;
   padding: $innerIdentation;
 
   @for $i from 1 through 31 {
     &__day:nth-child(#{$i})::before {
       content: '#{$i}';
-
-      // position: absolute;
-      // top: 50%;
-      // left: 50%;
-      // transform: translate(-50%, -50%);
     }
   }
 
@@ -38,25 +27,23 @@
   }
 
   &__day {
-    box-sizing: border-box;
-
-    // position: relative;
     justify-content: center;
     align-items: center;
     display: none;
+    transition: all 0.5s;
+    border: $borderWidth solid $borderColor;
+    box-sizing: border-box;
+    width: $cellWidth;
+    height: $cellWidth;
+    background-color: $cellColor;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
     text-align: center;
-    width: $cellWidth;
-    height: $cellWidth;
-    background-color: #eee;
-    border: 1px solid black;
-    transition: all 0.5s;
 
     &:hover {
-      background-color: #ffbfcb;
-      cursor: pointer;
       transform: translateY(-20px);
+      background-color: $hoverColor;
+      cursor: pointer;
     }
   }
 }
