replace div to ul li

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,15 +1,4 @@
-$weekday: mon, tue, wed, thu, fri, sat, sun;
-$dayBox: 100px;
-$gap: 1px;
-$weekdayIter: (
-  mon 0,
-  tue 101px,
-  wed 202px,
-  thu 303px,
-  fri 404px,
-  sat 505px,
-  sun 606px
-);
+@import './value/value';
 
 body {
   margin: 0;
