add fixed solution

--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -1,9 +1,10 @@
 .calendar {
   display: flex;
-  gap: 1px;
-  width: $calendar-width;
   flex-wrap: wrap;
   padding: 10px;
+  gap: 1px;
+  width: $calendar-width;
+  height: 600px;
 
   &__day {
     display: flex;
