--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,89 @@
+$font-family: Arial, sans-serif;
+$font-size: 30px;
+$cell-color: #eee;
+$cell-size: 100px;
+$border-size: 1px;
+$gap-size: 1px;
+$cell-plus-border-size: $cell-size + $border-size;
+
+* {
+  box-sizing: border-box;
+  font-family: $font-family;
+  font-size: $font-size;
+}
+
+ul li {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.calendar {
+  width: (7 * ($cell-size + (2 * $border-size))) + (6 * (2 * $gap-size));
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 10px;
+  gap: $gap-size;
+
+  &::before {
+    content: '';
+    position: absolute;
+    font-size: $font-size;
+    color: black;
+  }
+
+  &__cell {
+    box-sizing: border-box;
+    position: relative;
+    width: $cell-size;
+    height: $cell-size;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: $border-size solid black;
+    background-color: $cell-color;
+    transition: transform 0.5s;
+    transition-duration: 0.5s;
+  }
+
+  &__cell:hover {
+    background-color: #ffbfcb;
+    transform: translateY(-20px);
+  }
+}
+
+@for $i from 1 through 31 {
+  .calendar__cell:nth-child(#{$i})::before {
+    content: '#{$i}';
+  }
+}
+
+$calendar-days: (
+  'mon': 0,
+  'tue': $cell-plus-border-size,
+  'wed': 2 * $cell-plus-border-size,
+  'thu': 3 * $cell-plus-border-size,
+  'fri': 4 * $cell-plus-border-size,
+  'sat': 5 * $cell-plus-border-size,
+  'sun': 6 * $cell-plus-border-size,
+);
+
+@each $day, $position in $calendar-days {
+  .calendar__cell--start-day-#{$day} {
+    margin-left: $position;
+  }
+}
+
+@for $length from 28 through 31 {
+  .calendar--month-length-#{$length} :nth-child(n + #{$length + 1}) {
+    display: none;
+  }
 }
